--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -23,8 +23,8 @@
    
     </div>
 
-    <small class="float-left" [routerLink]="['/editprofile']">EDIT PROFILE</small>
-    <small class="float-right" [routerLink]="['/logout']">LOGOUT</small>
-     
+    <button class="float-left" [routerLink]="['/editprofile']">EDIT PROFILE</button>
+    <button class="float-right" [routerLink]="['/logout']">LOGOUT</button>
+    
      
      
