--- a/src/app/editprofile/editprofile.component.html
+++ b/src/app/editprofile/editprofile.component.html
@@ -6,7 +6,7 @@
         <button type="button" (click)="onUpload()">Upload</button>
   </div> -->
 
-    
+      
 <div class="container">
 <h3>Profile Update</h3>
     <form #Editform="ngForm" (ngSubmit)="updateUser()">
@@ -24,10 +24,11 @@
       </div>
       <div class="form-group">
         <label for="username">Username:</label>
-        <input type="username" class="form-control" name="username" [(ngModel)]="user.username" required #username="ngModel"
+        <input type="username" class="form-control" name="username" disabled="true"  [(ngModel)]="user.username" required #username="ngModel"
         [class.is-invalid]="username.invalid && username.touched">
         <small class="text-danger" [class.d-none]="username.valid || username.untouched">Username is required</small>
       </div>
+
       <div class="form-group">
         <label for="pwd">Password:</label>
         <input type="password" class="form-control" name="password" [(ngModel)]="user.password" required #password="ngModel"
@@ -37,7 +38,7 @@
 
       <div class="form-group">
         <label for="pwd">Confirm Password:</label>
-        <input type="password" class="form-control" name="cpassword" [(ngModel)]="user.password" required #cpassword="ngModel"
+        <input type="password" class="form-control" name="cpassword" [(ngModel)]="user.cpassword" required #cpassword="ngModel"
         [class.is-invalid]="cpassword.invalid && cpassword.touched">
         <small class="text-danger" [class.d-none]="(cpassword.value == password.value)  || cpassword.untouched">Password and confirm password should match</small>
       </div>
