--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,14 +6,14 @@
   <form #loginform="ngForm" (ngSubmit)="loginUser()">
       <small class="text-danger" >{{msg}}</small>
     <div class="form-group">
-      <label for="email">Email:</label>
-      <input type="email" class="form-control"  name="email" [(ngModel)]="user.emailid" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
-      #email="ngModel"
-      [class.is-invalid]="email.invalid && email.touched">
-      <!-- <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is required</small> -->
-   <div *ngIf="email.errors && email.invalid && email.touched">
-       <small class="text-danger" *ngIf="email.errors.required">Email id is required</small>
-       <small class="text-danger" *ngIf="email.errors.pattern">Enter valid email id</small>
+      <label for="username">Username:</label>
+      <input type="username" class="form-control"  name="username" [(ngModel)]="user.username"  required
+      #username="ngModel"
+      [class.is-invalid]="username.invalid && username.touched">
+
+   <div *ngIf="username.errors && username.invalid && username.touched">
+       <small class="text-danger" *ngIf="username.errors.required">Username is required</small>
+       <small class="text-danger" *ngIf="username.errors.pattern">Enter valid username</small>
    </div>
     
     </div>
