--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -4,7 +4,47 @@
 <h3>User Registration</h3>
     <form #Registerform="ngForm" (ngSubmit)="registerUser()">
         <small class="text-danger" >{{msg}}</small>
-      <!-- <small [class.text-danger]="msg.status==500" >{{msg.message}}</small> -->
+          
+        <div class="container row">
+          <div class="col-md-12">
+              <h1>Upload Image</h1>
+          </div>
+      </div>
+      <div class="container row">
+          <div class="col-md-6">
+              <input type="file" (change)="onFileChanged($event)">
+          </div>
+          <div class="col-md-6">
+              <input type="button" (click)="onUpload()" value="upload">
+          </div>
+      </div>
+      <hr />
+      <div class="container row">
+          <div class="col-md-12">
+              <div *ngIf=message>{{message}}</div>
+          </div>
+      </div>
+      <div class="container row">
+          <div class="col-md-6">
+              <input type="text" class="form-control" id="name" placeholder="image name" [(ngModel)]="imageName"
+                  name="name" />
+          </div>
+          <div class="col-md-6">
+              <input type="button" (click)="getImage()" value="Get Image">
+          </div>
+      </div>
+      <div class="container row">
+          <div class="col-md-12">
+              <div *ngIf=retrievedImage>
+                  <img [src]="retrievedImage">
+              </div>
+          </div>
+      </div>
+
+
+
+
+      
       <div class="form-group">
         <label for="email">Email:</label>
         <input type="email" class="form-control"  name="email" [(ngModel)]="user.emailid" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
@@ -31,7 +71,7 @@
 
       <div class="form-group">
         <label for="pwd">Confirm Password:</label>
-        <input type="password" class="form-control" name="cpassword" [(ngModel)]="user.password" required #cpassword="ngModel"
+        <input type="password" class="form-control" name="cpassword" [(ngModel)]="user.cpassword" required #cpassword="ngModel"
         [class.is-invalid]="cpassword.invalid && cpassword.touched">
         <small class="text-danger" [class.d-none]="(cpassword.value == password.value)  || cpassword.untouched">Password and confirm password should match</small>
       </div>
