--- a/src/app/logout/logout.component.html
+++ b/src/app/logout/logout.component.html
@@ -4,5 +4,6 @@
  Thank You for using application
 </div>
 
-<small class="float-right" [routerLink]="['/login']">Click here to login</small>
+<!-- <small class="float-right" [routerLink]="['/login']">Click here to login</small> -->
+<button class="float-right" [routerLink]="['/login']">Click here to login</button>
 </div>
