--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -3,47 +3,16 @@
 <div class="container">
 <h3>User Registration</h3>
     <form #Registerform="ngForm" (ngSubmit)="registerUser()">
-        <small class="text-danger" >{{msg}}</small>
+               <small class="text-danger" >{{msg}}</small>
           
-        <div class="container row">
-          <div class="col-md-12">
-              <h1>Upload Image</h1>
+        <div class="form-group">
+            <label for="photo">Upload Photo:</label>
+            <input type="file" class="form-control" (change)="onSelectFile($event)" style="height:100%" ng-required="file" >
           </div>
-      </div>
-      <div class="container row">
-          <div class="col-md-6">
-              <input type="file" (change)="onFileChanged($event)">
-          </div>
-          <div class="col-md-6">
-              <input type="button" (click)="onUpload()" value="upload">
-          </div>
-      </div>
-      <hr />
-      <div class="container row">
-          <div class="col-md-12">
-              <div *ngIf=message>{{message}}</div>
-          </div>
-      </div>
-      <div class="container row">
-          <div class="col-md-6">
-              <input type="text" class="form-control" id="name" placeholder="image name" [(ngModel)]="imageName"
-                  name="name" />
-          </div>
-          <div class="col-md-6">
-              <input type="button" (click)="getImage()" value="Get Image">
-          </div>
-      </div>
-      <div class="container row">
-          <div class="col-md-12">
-              <div *ngIf=retrievedImage>
-                  <img [src]="retrievedImage">
-              </div>
-          </div>
-      </div>
-
-
-
-
+          <!-- <button class="btn btn-success" (click)="upload()">
+            Upload
+          </button> -->
+    
       
       <div class="form-group">
         <label for="email">Email:</label>
